[package]
name = "red_memo"
version = "0.1.1"
authors = ["Ken Bateman <novadenizen@gmail.com>"]
edition = "2018"
description = "A simple, safe, single-threaded, pure rust library for memoization and dynamic programming"
license = "LGPL-3.0"
repository = "https://github.com/NovaDenizen/red_memo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
